package game.assets.mcui.event;

public class ClickEvent extends Event {
    public ClickEvent(EventType<? extends ClickEvent> eventType) {
        super(eventType);
    }
}
