package game.assets.mcui.event;

public interface EventTarget {

}
